examples/test/testpolicy17384.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17384
  namespace: namespace188
spec:
  podSelector:
    matchLabels:
      key20: value40
      key10: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value9
          key14: value22
          key40: value35
      podSelector:
        matchLabels:
          key5: value49
